mdapipkg/unpackaged/objects/VoiceMap__c.object
<CustomObject>
    <description>Maps device, user, speaker, etc. Ids to SFDC</description>
    <fields>
        <fullName>Alias__c</fullName>
        <description>The name to display for the mapping</description>
        <label>Alias</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Detailed description of the device, service, etc.</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>User_Id, Device_Id, Speaker_Id, etc.</description>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <description>The SFDC User Id associated with the remote Id</description>
        <label>User Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>The remote Id value</description>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <description>The name of the device/service vendor</description>
        <label>Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Voice Map</label>
    <nameField>
        <label>VoiceMap Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Voice Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>